# sleap-social-behavior-lab

./: COURSE_DESIGN.md  DEPLOY.md  README.md  STYLE_GUIDE.md  home.py  pyproject.toml  serve.py
course/: course_utils.py  neural_utils.py
data/: heldout_derived.npz  neural_demo.npz  readout_board.csv  train_derived.npz  umap_sweep.npz
data/assets/: CREDITS.md
data/raw_slp/: example_slp_decoded.npz
notebooks/: 01_load_sleap.py  01_pose_and_identity.py  02_body_frame_and_features.py  02_features.py  03_behavior_in_time.py  03_clustering.py  03_exploring_behavior_in_time.py  04_collapsing_to_a_manifold.py  04_pca_clustering_and_stats.py  04_rank_stats.py  05_dynamics_and_decoding.py  05_how_analyses_mislead.py  05_label_exemplars.py  06_dynamics_and_decoding.py  06_mlp_inference.py  06_motion_correction.py  07_calcium_extraction.py  07_from_movie_to_traces.py  08_reading_the_population.py  08_source_extraction.py  09_place_and_grid_cells.py  10_neural_social_decoding.py
tools/: build_calcium_schematic.py  build_continuous_tracks.py  build_dataset.py  build_derived.py  build_exemplar_gifs.py  build_nb03_morlet_slide.py  build_nb07_assets.py  build_nb07_raw_traces_gif.py  build_nb08_assets.py  build_neural_demo.py  build_readout_board.py  build_umap_sweep.py  check_bundle_size.py  decode_example_slp.py
