[project]
name = "sleap-social-behavior-lab"
version = "0.1.0"
description = "Teaching notebooks: analyzing SLEAP social-behavior data — features, clustering, rank stats, labeling, and an MLP behavior classifier, all in interactive marimo notebooks."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "marimo>=0.9",
    "numpy>=1.24,<2.1",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "numba>=0.59",
    "umap-learn>=0.5.6",
    "hdbscan>=0.8.36",
    "plotly>=5.20",
    "imageio>=2.34",
    "pillow>=10.0",
]

[project.optional-dependencies]
# Instructors only: sleap-io pulls a heavy chain (pynwb, skia-python, ...) and is needed just to
# regenerate the bundled data (tools/build_dataset.py, tools/decode_example_slp.py). The course
# notebooks load pre-decoded .npz, so students never install it.  ->  uv sync --extra build
build = ["sleap-io>=0.4"]

[tool.marimo.runtime]
auto_instantiate = true
